--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,21 +1,31 @@
 header {
-  height: 150px;
-  background: gold;
+  height: 120px;
+  background: #ffe300;
   margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-header img {
-  margin: 0;
-  width: 30%;
-  height: 110px;
+header #linkImgLogo {
+  margin-left: 60px;
+}
+header #linkImgLogo img {
+  width: 100%;
+  height: 90px;
 }
 header button {
-  width: 20%;
-  height: 70px;
-  border: 5px solid gray;
-  border-radius: 5px;
+  width: 100%;
+  height: 60px;
+  border: 3px solid gray;
+  border-radius: 10px;
   background: #fdd44d;
-  color: white;
+  color: black;
   float: right;
+  margin-right: 60px;
+  font-family: "Indie Flower", cursive;
+  font-family: "Coming Soon", cursive;
+  font-family: "Chilanka", cursive;
+  font-size: 18px;
 }
 
 .Game {
@@ -24,14 +34,14 @@ header button {
   margin: 0;
 }
 .Game section {
-  width: 70%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 5px auto 5px auto;
+  width: 60%;
+  display: grid;
+  margin: 35px auto 35px auto;
+  grid-template-columns: repeat(4, minmax(100px, 1fr));
+  justify-items: center;
 }
 .Game section article {
-  width: 18%;
+  width: 90%;
   height: auto;
   display: flex;
   margin: 5px;
@@ -57,6 +67,13 @@ body #root .App {
   margin: 0;
   display: flex;
   flex-direction: column;
+}
+body #root .App footer {
+  padding-bottom: 15px;
+  font-family: "Indie Flower", cursive;
+  font-family: "Coming Soon", cursive;
+  font-family: "Chilanka", cursive;
+  font-size: 18px;
 }
 
 /*# sourceMappingURL=styles.css.map */
