--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -4,14 +4,14 @@
     margin: 0;
 
     section {
-        width: 70%;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin: 5px auto 5px auto;
+        width: 60%;
+        display: grid;
+        margin: 35px auto 35px auto;
+        grid-template-columns: repeat(4, minmax(100px, 1fr));
+        justify-items: center;
 
         article {
-            width: 18%;
+            width: 90%;
             height: auto;
             display: flex;
             margin: 5px;
