--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -12,6 +12,14 @@ body {
             margin: 0;
             display: flex;
             flex-direction: column;
+
+            footer {
+                padding-bottom: 15px;
+                font-family: 'Indie Flower', cursive;
+                font-family: 'Coming Soon', cursive;
+                font-family: 'Chilanka', cursive;
+                font-size: 18px;
+            }
         }
     }
 }
