--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -56,8 +56,46 @@ header button {
   border-radius: 7px;
 }
 
+.GameRules {
+  display: flex;
+  padding: 40px;
+  margin: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.GameRules h2 {
+  font-family: "Indie Flower", cursive;
+  font-family: "Coming Soon", cursive;
+  font-family: "Chilanka", cursive;
+  margin: 20px;
+}
+.GameRules section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.GameRules section article {
+  width: 30%;
+  margin: 15px;
+  padding: 0px 15px 20px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Indie Flower", cursive;
+  font-family: "Coming Soon", cursive;
+  font-family: "Chilanka", cursive;
+  font-size: 18px;
+}
+.GameRules section article img, .GameRules section article h4, .GameRules section article p, .GameRules section article ul {
+  margin: 7px;
+}
+
 body {
   margin: 0;
+  padding: 0;
   background: #fffb95;
 }
 body #root {
@@ -69,7 +107,7 @@ body #root .App {
   flex-direction: column;
 }
 body #root .App footer {
-  padding-bottom: 15px;
+  padding-bottom: 2px;
   font-family: "Indie Flower", cursive;
   font-family: "Coming Soon", cursive;
   font-family: "Chilanka", cursive;
