--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,21 +39,60 @@ header button {
   margin: 35px auto 35px auto;
   grid-template-columns: repeat(4, minmax(100px, 1fr));
   justify-items: center;
+  perspective: 1000px;
 }
 .Game section article {
   width: 90%;
-  height: auto;
+  height: 120px;
+  cursor: pointer;
   display: flex;
   margin: 5px;
   border-radius: 12px;
   border: 6px solid #f9af00b3;
+  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+  /*   img {
+        width: 100%;
+        height: 120px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 7px;
+    } */
 }
-.Game section article img {
+.Game section article article:active {
+  transform: scale(0.97);
+  transition: transform 0.2s;
+}
+.Game section article .front-face {
   width: 100%;
-  height: 120px;
-  margin-left: auto;
-  margin-right: auto;
+  height: 100%;
   border-radius: 7px;
+  position: absolute;
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
+}
+.Game section article .front-face img {
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+}
+.Game section article .back-face {
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  background: greenyellow;
+  position: absolute;
+  backface-visibility: hidden;
+}
+.Game section article .back-face img {
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+}
+.Game section .flip {
+  transform: rotateY(180deg);
 }
 
 .GameRules {
@@ -127,23 +166,28 @@ header button {
   font-size: 22px;
 }
 
-body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  /* display: flex; */
+}
+* body {
+  height: 100vh;
   background: #fffb95;
 }
-body #root {
+* body #root {
   margin: 0;
 }
-body #root .App {
+* body #root .App {
   margin: 0;
 }
-body #root .App div {
+* body #root .App div {
   margin: 0;
   display: flex;
   flex-direction: column;
 }
-body #root .App div footer {
+* body #root .App div footer {
   padding: 12px;
   font-family: "Indie Flower", cursive;
   font-family: "Coming Soon", cursive;
