--- a/src/sass/_gamecards.scss
+++ b/src/sass/_gamecards.scss
@@ -9,22 +9,67 @@
         margin: 35px auto 35px auto;
         grid-template-columns: repeat(4, minmax(100px, 1fr));
         justify-items: center;
+        perspective: 1000px;
 
         article {
             width: 90%;
-            height: auto;
+            height: 120px;
+            cursor: pointer;
             display: flex;
             margin: 5px;
             border-radius: 12px;
             border: 6px solid #f9af00b3;
+            position: relative;
+            transform: scale(1);
+            transform-style: preserve-3d;
+            transition: transform .5s;
 
-            img {
+            article:active {
+                transform: scale(.97);
+                transition: transform .2s;
+            }
+
+          /*   img {
                 width: 100%;
                 height: 120px;
                 margin-left: auto;
                 margin-right: auto;
                 border-radius: 7px;
+            } */
+
+            .front-face {
+                width: 100%;
+                height: 100%;
+                border-radius: 7px;
+                position: absolute;
+                backface-visibility: hidden;
+                transform: rotateY(180deg);
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 7px;
+                }
             }
+
+            .back-face {
+                width: 100%;
+                height: 100%;
+                border-radius: 7px;
+                background: greenyellow;
+                position: absolute;
+                backface-visibility: hidden;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 7px;
+                }
+            }
+        }
+
+        .flip {
+            transform: rotateY(180deg);
         }
     }
 }
