--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,7 +8,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* display: flex; */
 
     body {
         height: 100vh;
@@ -16,22 +15,17 @@
         
         #root {
             margin: 0;
-            
-            .App {
+                            
+            div {
                 margin: 0;
-                
-                div {
-                    margin: 0;
-                    display: flex;
-                    flex-direction: column;
+                display: flex;
+                flex-direction: column;
     
-                    footer {
-                        padding: 12px;
-                        font-family: 'Indie Flower', cursive;
-                        font-family: 'Coming Soon', cursive;
-                        font-family: 'Chilanka', cursive;
-                        font-size: 18px;
-                    }
+                footer {
+                    padding: 12px;
+                    font-family: 'Indie Flower', cursive;                        font-family: 'Coming Soon', cursive;
+                    font-family: 'Chilanka', cursive;
+                    font-size: 18px;
                 }
             }
         }
