Estilos en distintas vistas del componente footer

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,7 @@
 @import '_gamecards';
 @import '_gamerules';
 @import '_pageerror';
+@import '_footer';
 
 
 * {
@@ -20,13 +21,6 @@
                 margin: 0;
                 display: flex;
                 flex-direction: column;
-    
-                footer {
-                    padding: 12px;
-                    font-family: 'Indie Flower', cursive;                        font-family: 'Coming Soon', cursive;
-                    font-family: 'Chilanka', cursive;
-                    font-size: 18px;
-                }
             }
         }
     }
