--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -166,6 +166,115 @@ header button {
   font-size: 22px;
 }
 
+/* @mixin style($width, $height, $margin) {
+    width: $width;
+    height: $height;
+    margin: $margin;
+}
+ */
+/* #view-section {
+    width: 100%;
+
+    .Home-body {
+        width: 100%;
+
+        #container-products {
+            padding: 3px 20px 3px 20px; 
+            align-items: center;
+
+            @include style(100%, auto, 0);
+
+            li{
+                display: -webkit-inline-box;
+                margin-right: 7px;
+            }
+
+            #ItemProduct {
+                display: flex; 
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+
+                @include style(150px, 288px, 2px 15px 2px 15px);
+
+                img {
+                   display: flex;
+                   justify-content: center;
+
+                   @include style(300px, 300px, 5px);
+
+                   @media (max-width: $smartphone) {
+                       width: 150px;
+                       height: 150px;
+                    }
+                   @media (min-width: $smartphone) and (max-width: $tablet) {
+                       width: 45%;
+                       height: 65px;
+                    }
+                   @media (min-width: $tablet) and (max-width: $desktop) {
+                       width: 50%;
+                       height: 75px;
+                    }
+                    @media (min-width: $desktop) {
+                       width: 55%;
+                       height: 75px;
+                    }
+                } */
+@media (max-width: 320px) {
+  footer {
+    padding: 5px;
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 12px;
+  }
+}
+@media (min-width: 320px) and (max-width: 480px) {
+  footer {
+    padding: 8px;
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 14px;
+  }
+}
+@media (min-width: 480px) and (max-width: 768px) {
+  footer {
+    padding: 11px;
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 16px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  footer {
+    padding: 14px;
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 18px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1200px) {
+  footer {
+    padding: 17px;
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  footer {
+    padding: 21px;
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 22px;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -182,13 +291,6 @@ header button {
   margin: 0;
   display: flex;
   flex-direction: column;
-}
-* body #root div footer {
-  padding: 12px;
-  font-family: "Indie Flower", cursive;
-  font-family: "Coming Soon", cursive;
-  font-family: "Chilanka", cursive;
-  font-size: 18px;
 }
 
 /*# sourceMappingURL=styles.css.map */
