--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,31 +1,130 @@
+/* @mixin style($width, $height, $margin) {
+    width: $width;
+    height: $height;
+    margin: $margin;
+}
+ */
+/* #view-section {
+    width: 100%;
+
+    .Home-body {
+        width: 100%;
+
+        #container-products {
+            padding: 3px 20px 3px 20px; 
+            align-items: center;
+
+            @include style(100%, auto, 0);
+
+            li{
+                display: -webkit-inline-box;
+                margin-right: 7px;
+            }
+
+            #ItemProduct {
+                display: flex; 
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+
+                @include style(150px, 288px, 2px 15px 2px 15px);
+
+                img {
+                   display: flex;
+                   justify-content: center;
+
+                   @include style(300px, 300px, 5px);
+
+                   @media (max-width: $smartphone) {
+                       width: 150px;
+                       height: 150px;
+                    }
+                   @media (min-width: $smartphone) and (max-width: $tablet) {
+                       width: 45%;
+                       height: 65px;
+                    }
+                   @media (min-width: $tablet) and (max-width: $desktop) {
+                       width: 50%;
+                       height: 75px;
+                    }
+                    @media (min-width: $desktop) {
+                       width: 55%;
+                       height: 75px;
+                    }
+                } */
 header {
-  height: 120px;
   background: #ffe300;
   margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* @media (min-width: $blackberry) and (max-width: $smartphone) {
+      @include style(8px, 14px);
+   }
+  @media (min-width: $smartphone) and (max-width: $tablet) {
+      @include style(11px, 16px);
+   }
+  @media (min-width: $tablet) and (max-width: $desktop) {
+      @include style(14px, 18px);
+  }
+  @media (min-width: $desktop) and (max-width: $smart) {
+      @include style(17px, 20px);
+  }
+  @media (min-width: $smart) {
+      @include style(21px, 22px);
+  } */
+  /*     #linkImgLogo {
+          margin-left: 60px;
+
+          img {   
+              width: 100%;
+              height: 90px;
+          }
+      }
+
+      button {
+          width: 100%;
+          height: 60px;
+          border: 3px solid rgb(128, 128, 128);
+          border-radius: 10px;
+          background: rgb(253, 212, 77);
+          color: black;
+          float: right;
+          margin-right: 60px;
+          font-family: 'Indie Flower', cursive;
+          font-family: 'Coming Soon', cursive;
+          font-family: 'Chilanka', cursive;
+          font-size: 18px;
+      } */
 }
-header #linkImgLogo {
-  margin-left: 60px;
-}
-header #linkImgLogo img {
-  width: 100%;
-  height: 90px;
-}
-header button {
-  width: 100%;
-  height: 60px;
-  border: 3px solid gray;
-  border-radius: 10px;
-  background: #fdd44d;
-  color: black;
-  float: right;
-  margin-right: 60px;
-  font-family: "Indie Flower", cursive;
-  font-family: "Coming Soon", cursive;
-  font-family: "Chilanka", cursive;
-  font-size: 18px;
+@media (max-width: 320px) {
+  header {
+    width: 100%;
+    height: 75px;
+  }
+  header #linkImgLogo {
+    margin-left: 20px;
+    outline: none;
+  }
+  header #linkImgLogo img {
+    width: 75%;
+    height: 45px;
+  }
+  header button {
+    width: 100%;
+    height: 40px;
+    background: #fdd44d;
+    border: 3px solid gray;
+    border-radius: 10px;
+    color: black;
+    float: right;
+    margin-right: 20px;
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 10px;
+    outline: none;
+  }
 }
 
 .Game {
