--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -12,7 +12,9 @@
 
 // min-width: Cuando el ancho del dispositivo sea mayor o igual a la medida 
 // especificada.
-// max-width: para todos los anchos de las pantallas que sean menores o iguales a 1024px.
+// max-width: Cuando todos los anchos de las pantallas que sean menores o 
+// iguales a la medida especificada.
+
 
 footer {
 
@@ -20,18 +22,18 @@ footer {
         @include style(5px, 12px);
     }
     @media (min-width: $blackberry) and (max-width: $smartphone) {
-        @include style(8px, 14px);
+        @include style(6px, 13px);
     }
     @media (min-width: $smartphone) and (max-width: $tablet) {
-        @include style(11px, 16px);
+        @include style(7px, 14px);
     }
     @media (min-width: $tablet) and (max-width: $desktop) {
-        @include style(14px, 18px);
+        @include style(8px, 15px);
     }
     @media (min-width: $desktop) and (max-width: $smart) {
-        @include style(17px, 20px);
+        @include style(9px, 16px);
     }
     @media (min-width: $smart) {
-        @include style(21px, 22px);
+        @include style(10px, 17px);
     }
 }
